予定表示のテストコードを追加

--- a/views/index.pug
+++ b/views/index.pug
@@ -20,7 +20,7 @@ block content
             tr
               td
                 a(href=`/schedules/${schedule.scheduleId}`) #{schedule.scheduleName}
-              td #{schedule.updatedAt}
+              td #{schedule.updateAt}
     else
       div
         a(href="/login") ログイン
